--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=leave_approval_system
 server.port=8085
 
-spring.datasource.url= jdbc:mysql://navyamysqlserver.mysql.database.azure.com:3306/leave_approval-ems?createDatabaseIfNotExist=true
+spring.datasource.url= jdbc:mysql://navya.mysql.database.azure.com:3306/leave_approval-ems?createDatabaseIfNotExist=true
 spring.datasource.username=navyaserver
 spring.datasource.password=Kunda@9618
 
